--- a/Pi/MainWindow.xaml
+++ b/Pi/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Pi"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800"
+        DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -24,16 +25,17 @@
             </Grid.RowDefinitions>
             
             <Label Content="Font" />
-            <ComboBox Grid.Column="1" Margin="5"/>
+            <ComboBox x:Name="FontNamesComboBox" Grid.Column="1" Margin="5" ItemsSource="{Binding Fonts}" SelectionChanged="FontName_Selected" />
 
             <Label Content="Style" Grid.Row="1" />
-            <ComboBox Grid.Column="1"  Grid.Row="1" Margin="5"/>
+            <ComboBox x:Name="FontStylesComboBox" Grid.Column="1" Grid.Row="1" Margin="5" ItemsSource="{Binding Styles}" SelectionChanged="FontStyle_Selected" />
 
             <Label Content="Height" Grid.Row="2" />
-            <TextBox Grid.Column="1"  Grid.Row="2" Margin="5" TextChanged="Update" />
+            <TextBox Grid.Column="1" Grid.Row="2" Margin="5" TextChanged="Update" 
+                     Text="{Binding FontHeight, UpdateSourceTrigger=PropertyChanged, Delay=500}" PreviewTextInput="NumberValidationTextBox" />
         </Grid>
         
-        <TextBlock Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Text="TODO" Margin="10"
-                   FontFamily="Courier New" FontSize="20" />
+        <TextBlock Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="10" Background="Black" Foreground="White"
+                   FontFamily="Courier New" FontSize="20" Text="{Binding RenderedString}" />
     </Grid>
 </Window>
